logs/project-altis-171018_112219.log
TTLocalizer: Running in language: english
from toontown.toonbase.TTLocalizerEnglish import *
OTPLocalizer: Running in language: english
from otp.otpbase.OTPLocalizerEnglish import *
Traceback (most recent call last):
  File "/usr/lib/python2.7/runpy.py", line 174, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "/usr/lib/python2.7/runpy.py", line 72, in _run_code
    exec code in run_globals
  File "/home/luke/Documents/Development/Altis/toontown/toonbase/ClientStartDist.py", line 26, in <module>
    import toontown.toonbase.DCImporter
  File "toontown/toonbase/DCImporter.py", line 4048, in <module>
    import toontown.toonbase.ClientStart
  File "toontown/toonbase/ClientStart.py", line 320, in <module>
    from toontown.toonbase import ToonBase
  File "toontown/toonbase/ToonBase.py", line 461
    os.mkdir(TTLocalizer.ScreenshotPath)projectaltis.com
                                                   ^
SyntaxError: invalid syntax
